# api/ambulance-wl.openapi.yaml
@@ -14,6 +14,8 @@ info:
 tags:
   - name: questionnaire
     description: Questionnare API
+  - name: ambulances
+    description: Ambulance details
 
 paths:
   "/questionnaire/{ambulanceId}/entries":
@@ -165,6 +167,58 @@ paths:
         "404":
           description: Ambulancia alebo dotazník s takým ID neexistuje
 
+  "/ambulance":
+    post:
+      tags:
+        - ambulances
+      summary: Saves new ambulance definition
+      operationId: createAmbulance
+      description: Use this method to initialize new ambulance in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Ambulance"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/AmbulanceExample"
+        description: Ambulance details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored ambulance
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Ambulance"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/AmbulanceExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/ambulance/{ambulanceId}":
+    delete:
+      tags:
+        - ambulances
+      summary: Deletes specific ambulance
+      operationId: deleteAmbulance
+      description: Use this method to delete the specific ambulance from the system.
+      parameters:
+        - in: path
+          name: ambulanceId
+          description: pass the id of the particular ambulance
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Ambulance with such ID does not exist
+  
 components:
   schemas:
     Questionnaire:
@@ -202,6 +256,27 @@ components:
             - "Áno, ale len občas"
             - "Fyzioterapia a masáže"
             - "Nie"
+    Ambulance:
+      type: object
+      required: [ "id", "name", "roomNumber"]
+      properties:
+        id:
+          type: string
+          example: dentist-warenova
+          description: Unique identifier of the ambulance
+        name:
+          type: string
+          example: Zubná ambulancia Dr. Warenová
+          description: Human readable display name of the ambulance
+        roomNumber:
+          type: string
+          example: 356 - 3.posch
+        questionnaires:
+          type: array
+          items:
+            $ref: '#/components/schemas/Questionnaire'
+      example:
+          $ref: "#/components/examples/AmbulanceExample"
 
   examples:
     QuestionnaireExample:
@@ -250,3 +325,43 @@ components:
             - "Áno, ale len občas"
             - "Fyzioterapia a masáže"
             - "Nie"
+
+    AmbulanceExample:
+      summary: Príklad ambulance so zoznamom dotazníkov
+      value:
+        id: dentist-warenova
+        name: "Zubná ambulancia Dr. Warenová"
+        roomNumber: "356 - 3.posch"
+        questionnaires:
+          - id: x321ab3
+            name: "Ján Novák"
+            patientId: "460527-jan-novak"
+            lastModified: "2038-12-24T10:05:00Z"
+            questions:
+              - "Žiadne"
+              - "Nie"
+              - "Chronická nádcha"
+              - "Nie"
+              - "Nie"
+              - "Áno, ale len občas"
+              - "Fyzioterapia a masáže"
+              - "Nie"
+          - id: x321abb4
+            name: "August Cézar"
+            patientId: "500110-august-cezar"
+            lastModified: "2038-12-24T11:00:00Z"
+            questions:
+              - "Žiadne"
+              - "Nie"
+              - "Chronická nádcha"
+              - "Nie"
+              - "Nie"
+              - "Áno, ale len občas"
+              - "Fyzioterapia a masáže"
+              - "Nie"
+
+
+
+
+
+
