# cmd/ambulance-api-service/main.go
@@ -8,6 +8,12 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/tomasandel/andel-project-webapi/api"
 	"github.com/tomasandel/andel-project-webapi/internal/ambulance_wl"
+
+	"context"
+	"time"
+
+	"github.com/gin-contrib/cors"
+	"github.com/tomasandel/andel-project-webapi/internal/db_service"
 )
 
 func main() {
@@ -22,10 +28,30 @@ func main() {
 	}
 	engine := gin.New()
 	engine.Use(gin.Recovery())
-	// request routings
 
+	corsMiddleware := cors.New(cors.Config{
+		AllowOrigins:     []string{"*"},
+		AllowMethods:     []string{"GET", "PUT", "POST", "DELETE", "PATCH"},
+		AllowHeaders:     []string{"Origin", "Authorization", "Content-Type"},
+		ExposeHeaders:    []string{""},
+		AllowCredentials: false,
+		MaxAge:           12 * time.Hour,
+	})
+
+	engine.Use(corsMiddleware)
+
+	// setup context update  middleware
+	dbService := db_service.NewMongoService[ambulance_wl.Ambulance](db_service.MongoServiceConfig{})
+	defer dbService.Disconnect(context.Background())
+	engine.Use(func(ctx *gin.Context) {
+		ctx.Set("db_service", dbService)
+		ctx.Next()
+	})
+
+	// request routings
 	handleFunctions := &ambulance_wl.ApiHandleFunctions{
 		QuestionnaireAPI: ambulance_wl.NewAmbulanceQuestionnaireListApi(),
+		AmbulancesAPI:    ambulance_wl.NewAmbulancesApi(),
 	}
 	ambulance_wl.NewRouterWithGinEngine(engine, *handleFunctions)
 
